got the buttons to display correctly

--- a/GifTastic/index.html
+++ b/GifTastic/index.html
@@ -13,10 +13,12 @@
 
     <h1 id="buttonZone"></h1>
     <input id="searchBar" type="text"></input>
+    <input type="submit" id="submit"></input>
     <p></p>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="assets/gif.js"></script>
 </body>
 
