running out of time

--- a/GifTastic/index.html
+++ b/GifTastic/index.html
@@ -15,6 +15,7 @@
     <input id="searchBar" type="text"></input>
     <input type="submit" id="submit"></input>
     <p></p>
+    <div id="searchResultsHTML"></div>
 
 
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
